--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,14 @@ build/
 dist/
 
 # Hardhat files
-cache/
-artifacts/
-typechain/
-typechain-types/
+ethereum/cache/
+ethereum/artifacts/
+ethereum/typechain/
+ethereum/typechain-types/
 
-# SUI
+# Sui
 .sui/
+sui/build/
 
 # IDE
 .vscode/
@@ -41,5 +42,4 @@ Thumbs.db
 # Misc
 *.tgz
 .cache/
-
 setup/
